tracking illustration for bp project

--- a/_posts/2022-03-30-pmbm_bp.md
+++ b/_posts/2022-03-30-pmbm_bp.md
@@ -38,10 +38,10 @@ The following tasks are proposed for the specialisation project:
 
 ## Proposed Tasks for the master thesis
 
-In the MSc thesis the goal will be to scale up the results from toy examples to realistic tracking problems, and to integrate the techniques in a complete PMBM-based tracking system. Possible code bases that this can build upon include [(Brekke and Tokle 2022)] and [(Garcia-Fernandez et al. 2018)]. Ideally, this could be a collaboration with project [autosit.github.io/sf/2022/03/30/pmbm_powerful/]. 
+In the MSc thesis the goal will be to scale up the results from toy examples to realistic tracking problems, and to integrate the techniques in a complete PMBM-based tracking system. Possible code bases that this can build upon include [(Brekke and Tokle 2022)] and [(Garcia-Fernandez et al. 2018)]. Ideally, this could be a collaboration with the project [The PMBM filter 1 - The world's most powerful tracker]. 
  
-|<img src="{{site.url}}/assets/giorgio-den-helder.jpeg" width="700"> | 
-| Giorgio Kufoalor during [Autosea] experiments in the Netherlands where AIS data were used |
+|<img src="{{site.url}}/assets/timesteps617-619.png" width="700"> | 
+| Example where marginal track probabilities could be useful: At the middle time step the misdetection hypothesis for the yellow target fails to get support from any of the association hypotheses, leading to premature track termination. |
 
 
 
@@ -72,5 +72,5 @@ Supervisor: [Edmund Brekke].
 [Milliampere]: https://www.ntnu.edu/autoferry
 [(Brekke and Tokle 2022)]: https://folk.ntnu.no/edmundfo/fusion2022preprints/BrekkeTokleExploration.pdf
 [(Garcia-Fernandez et al. 2018)]: https://ieeexplore.ieee.org/document/8289337
-[autosit.github.io/sf/2022/03/30/pmbm_powerful/]: https://autosit.github.io/sf/2022/03/30/pmbm_powerful/
+[The PMBM filter 1 - The world's most powerful tracker]: https://autosit.github.io/sf/2022/03/30/pmbm_powerful/
 [TTK4250 Sensor Fusion]: https://www.ntnu.no/studier/emner/TTK4250#tab=omEmnet
