nonsense label to lmipda

--- a/_posts/2020-04-11-lmipda.md
+++ b/_posts/2020-04-11-lmipda.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Efficient approximations in multi-target tracking
-category: SF
+category: Nonsense
 ---
 ## Background
 The core challenge in multi-target tracking is data association: The tracking method must account for the different possibilities for how the given measurements may be due to different targets or false alarms (clutter). Optimal solutions to this problem need to consider an exponential number of combinations, which clearly is not practically feasible for anything more complex than toy problems. Different solution strategies can be pursued depending on the computational resources available. 
