link to autoferry gemini video in radarsim

--- a/_posts/2023-03-27-radarsim.md
+++ b/_posts/2023-03-27-radarsim.md
@@ -7,7 +7,7 @@ category: LTP
 
 Simulations play a key role in the verification of autonomous systems. For instance, hardware-in-the-loop (HIL) or software-in-the-loop (SIL) simulation allows the engineer to test how an autonomous system will respond to many more scenarios than those one can afford to encounter in the real world. Video game technology is a crucial enabler for this kind of simulations, because game engines provide 3D rendering capabilities that can be used to simulate sensor data.  
 
-In the Autoferry Gemini, the digital twin of the autonomous ferries milliAmpere 1 & 2, both lidar data, camera data, infrared data and radar data are simulated in this manner. However, the realism of the different sensor modalities is somewhat variable. Realistic lidar data is perhaps the easiest to simulate, because each lidar beam is either reflected or it is not reflected. Optical data also have a high degree of realism, since the simulation of video after all is the primary purpose of the underlying game engine. Infrared data are more challenging because the infrared radiation depends on the temperature of different objects, for which we may not have good physical models.  Radar is also challenging because the longer wavelength of radio waves leads to complicated blurring and interference effects. Nevertheless, for autonomous surface vessels, radar is the most ubiquitous of the four sensor modalities.
+In the [Autoferry Gemini](https://www.youtube.com/watch?v=7i1Ykmdtic0), the digital twin of the autonomous ferries milliAmpere 1 & 2, both lidar data, camera data, infrared data and radar data are simulated in this manner. However, the realism of the different sensor modalities is somewhat variable. Realistic lidar data is perhaps the easiest to simulate, because each lidar beam is either reflected or it is not reflected. Optical data also have a high degree of realism, since the simulation of video after all is the primary purpose of the underlying game engine. Infrared data are more challenging because the infrared radiation depends on the temperature of different objects, for which we may not have good physical models.  Radar is also challenging because the longer wavelength of radio waves leads to complicated blurring and interference effects. Nevertheless, for autonomous surface vessels, radar is the most ubiquitous of the four sensor modalities.
 
 
 ## Scope
