--- a/_posts/2023-03-27-radarsim.md
+++ b/_posts/2023-03-27-radarsim.md
@@ -24,6 +24,9 @@ The 5th year project should aim to answer the following research question: How s
 4. Integrate the proposed model in Autoferry Gemini and see whether you can generate data with blurring properties similar to real data from a low-cost radar.
 5. If time permits: Experiment with additional clutter sources, multiple returns etc. 
 
+|<img src="{{site.url}}/assets/radarsim.png" width="700"> | 
+| Real data from a Navtech radar and simulated radar data from Autoferry Gemini.|
+
 ## Proposed Tasks for the MSc thesis
 
 The overarching goal of the Master’s thesis is to increase the realism so that the simulator can mimic most of the real effects that are expected to challenge radar-based situational awareness in real-world autonomous surface vessels. The Master’s thesis may involve one or more of the following tasks:
