radar wake image in radarsim

--- a/_posts/2023-03-27-radarsim.md
+++ b/_posts/2023-03-27-radarsim.md
@@ -36,6 +36,9 @@ The overarching goal of the Master’s thesis is to increase the realism so that
 * Ship wakes are a source of clutter, both for radar, camera and lidar. A realistic wake model should take into account [Kelvin's wake]( https://www.itp.uni-hannover.de/fileadmin/itp/emeritus/zawischa/static_html/KWake.html) model.
 * Increase the fidelity of the simulation by also simulate the raw amplitude data that one can expect to have in a more advanced radar.
 
+|<img src="{{site.url}}/assets/radarwake.png" width="700"> | 
+| A ship and its wake as seen in post-processed radar data.|
+
 ## Prerequisites
 
 Additional background in physics or signal processing, or experience with radar systems will be beneficial. 
