invalidated ltp canal

--- a/_posts/2020-04-19-ltp_canal.md
+++ b/_posts/2020-04-19-ltp_canal.md
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Automatic understanding of traffic patterns in an urban harbour environment
-category: LTP
+category: NA
 ---
 |<img src="{{site.url}}/assets/lowestpd.png" width="700"> | 
 | Still image recorded from the sensor station at Brattøra. |  
