--- a/_posts/2024-03-21-nerfs.md
+++ b/_posts/2024-03-21-nerfs.md
@@ -7,7 +7,7 @@ category: LTP
 
 ## Background
 
-Neural radiance fields (NeRFs) have gained momentum as a tool to reconstruct complex three-dimensional scenes from two-dimensional images. Such reconstructions can be used as part of a digital twin.  
+Neural radiance fields (NeRFs) have gained momentum as a tool to reconstruct complex three-dimensional scenes from two-dimensional images. Such reconstructions can be used as part of a digital twin.   
 
 
 
@@ -23,9 +23,9 @@ The goal of this project is to build content for the digital twin Autoferry Gemi
 * Train NeRF models on collected data, and generate high-fidelity simulations. 
 * Analyze the output in quantitative and qualitative terms. 
 
-## Proposed tasks for the MSc thesis 
+## Proposed tasks for the master thesis
 
-The MSc thesis will build on the specialization project, and pursue a topic such as one of the following in greater depth:
+The master thesis will build on the specialization project, and pursue a topic such as one of the following in greater depth:
 
 * To which extent can NeRFs be used to simulate realistic sea conditions?
 * To which extent can NeRFs be used to generate dynamic objects such as ships, cars, pedestrians, birds, etc?
