--- a/_posts/2024-03-21-nerfs.md
+++ b/_posts/2024-03-21-nerfs.md
@@ -32,7 +32,7 @@ The master thesis will build on the specialization project, and pursue a topic s
 * Can we also use NeRFs to estimate the motion of dynamic objects using online data from cameras or lidar?
 
 ## Prerequisites
-This is a list of *recommended* prerequisites for this master project.
+This is a list of recommended prerequisites for this master project.
 
 - Strong programming skills in either Matlab, Python or C++. 
 - You should have had courses in machine learning and/or computer vision. 
